--- a/Todo/res/layout/todo_row.xml
+++ b/Todo/res/layout/todo_row.xml
@@ -7,10 +7,11 @@
         android:id="@+id/icon"
         android:layout_width="30dp"
         android:layout_height="22dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/reminder" >
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="3sp"
+        android:src="@drawable/ic_urgent" >
     </ImageView>
 
     <TextView
