--- a/Todo/res/menu/todo_detail.xml
+++ b/Todo/res/menu/todo_detail.xml
@@ -5,6 +5,11 @@
           android:title="@string/action_delete"
           android:showAsAction="ifRoom" />
     
+    <item android:id="@+id/action_share"
+          android:icon="@drawable/ic_action_share"
+          android:title="@string/action_share"
+          android:showAsAction="ifRoom" />
+
     <item android:id="@+id/action_save"
           android:icon="@drawable/ic_action_save"
           android:title="@string/action_save"
