--- a/Todo/res/menu/todos_overview.xml
+++ b/Todo/res/menu/todos_overview.xml
@@ -7,6 +7,13 @@
     </item>
 
     <item
+        android:id="@+id/action_play"
+        android:icon="@drawable/ic_action_play"
+        android:showAsAction="always"
+        android:title="@string/action_play">
+    </item>
+
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
